--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -74,7 +74,8 @@
             </li>-->
 	    <li class="list-group-item">
 		<h4 class="list-group-item-heading">{%trans "Legend" %}</h4>
-		<img id="legend_icon" src="{{ resource.get_legend.url }}">
+		<img id="legend_icon" src="{{ grid.resource.get_legend.url }}">
+        <img id="legend_icon2" src="{{jurisdiction.resource.get_legend.url}}">
 	    </li>
 	    <li class="list-group-item">
 		<div class="selections"><nav class="filter">
