--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -597,7 +597,7 @@ Ext.onReady(function (){
             this.box.activate();
         },
         highlight_layer: highlight_layer,
-        jurisdiction: jurisdiction,
+        jurisdiction: jurisdiction_name,
         notice: function (bounds){ 
             var ll = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.left, bounds.bottom)); 
             var ur = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.right, bounds.top)); 
