--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -436,6 +436,7 @@ function getJurisdictionGeom(jurisdiction, juris_vec_layer){
                 var feature_out =olGeoJSON.read(response.priv.responseText);
                 juris_vec_layer.addFeatures(feature_out);
                 jurisdiction_geoms = juris_vec_layer.features;
+                console.log(jurisdiction_geoms.length);
                 //jstsJurisdictionGeoms=new javascript.util.ArrayList();
                 jstsJurisdictionGeoms=[];
                 tmp = jstsParser.read(response.priv.responseText);
@@ -558,7 +559,7 @@ Ext.onReady(function (){
                 maxExtent: new OpenLayers.Bounds(j_layer["bbox"])
             } 
         );
-        
+        console.log(j_layer);
         map.addLayer(jurisdiction_view_layer);
     }
 
