--- a/geonode/templates/search/_general_filters.html
+++ b/geonode/templates/search/_general_filters.html
@@ -17,6 +17,8 @@
 {% if SEARCH_FILTERS.KEYWORDS_ENABLED %}
 <nav class="filter">
   <h4><a href="#" class="toggle toggle-nav"><i class="fa fa-chevron-right"></i> {% trans "Keywords" %}</a></h4>
+    <div id="treeview" class=""></div>
+<!--
   <ul class="nav closed" id="keywords">
     {% verbatim %}
       <li ng-repeat="keyword in keywords" ng-if="keyword.count > 0">
@@ -26,6 +28,7 @@
       </li>
     {% endverbatim %}
   </ul>
+-->
 </nav>
 {% endif %}
 {% if SEARCH_FILTERS.OWNERS_ENABLED %}
