--- a/geonode/templates/search/search_scripts.html
+++ b/geonode/templates/search/search_scripts.html
@@ -1,7 +1,9 @@
 {% if DEBUG_STATIC %}
+
 <script src="{{ STATIC_URL }}lib/js/bootstrap-datepicker.js?v={{ VERSION }}" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}lib/js/angular.js?v={{ VERSION }}"></script>
 <script src="{{ STATIC_URL }}lib/js/angular-leaflet-directive.min.js?v={{ VERSION }}"></script>
+<script src="{{ STATIC_URL }}lib/js/bootstrap-treeview.js?v={{ VERSION }}"></script>
 {% endif %}
 
 {% if include_spatial == 'true' %}
@@ -21,6 +23,7 @@
   $("body").attr('ng-controller', 'geonode_search_controller');
   CATEGORIES_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='categories' %}';
   KEYWORDS_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='keywords' %}';
+  KEYWORDS_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='keywords' %}';
   REGIONS_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='regions' %}';
   OWNERS_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='owners' %}';
   HAYSTACK_SEARCH = "{{ HAYSTACK_SEARCH }}".toLowerCase() === "true";
@@ -33,6 +36,15 @@
   module.constant('Configs', {
     url: SEARCH_URL
   });
+
+  $(function() {
+      var defaultData = $.ajax("/h_keywords_api" ).done(function( data ) {
+      $('#treeview').treeview({
+          data: data,
+          levels: 1,
+      });
+     });
+   });
 
   var deps = ['search'];
   {% if include_spatial == 'true' %}
