--- a/geonode/templates/search/search_scripts.html
+++ b/geonode/templates/search/search_scripts.html
@@ -23,7 +23,7 @@
   $("body").attr('ng-controller', 'geonode_search_controller');
   CATEGORIES_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='categories' %}';
   KEYWORDS_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='keywords' %}';
-  KEYWORDS_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='keywords' %}';
+  H_KEYWORDS_ENDPOINT = '{% url 'h_keywords_api' %}';
   REGIONS_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='regions' %}';
   OWNERS_ENDPOINT = '{% url 'api_dispatch_list' api_name='api' resource_name='owners' %}';
   HAYSTACK_SEARCH = "{{ HAYSTACK_SEARCH }}".toLowerCase() === "true";
@@ -36,15 +36,6 @@
   module.constant('Configs', {
     url: SEARCH_URL
   });
-
-  $(function() {
-      var defaultData = $.ajax("/h_keywords_api" ).done(function( data ) {
-      $('#treeview').treeview({
-          data: data,
-          levels: 1,
-      });
-     });
-   });
 
   var deps = ['search'];
   {% if include_spatial == 'true' %}
