is tree view.min

--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 {% if DEBUG_STATIC %}
 <script src="{% static "lib/js/bootstrap-datetimepicker.min.js" %}" type="text/javascript"></script>
-<script src="{% static "lib/js/bootstrap-treeview.js" %}" type="text/javascript"></script>
+<script src="{% static "lib/js/bootstrap-treeview.min.js" %}" type="text/javascript"></script>
 <script src="{% static "lib/js/bootstrap-tokenfield.js" %}" type="text/javascript"></script>
 {% endif %}
 <script type="text/javascript">
