--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -328,12 +328,12 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
                  //json_parser = new OpenLayers.Format.GeoJSON();
                  feature_out = olGeoJSON.read(response.priv.responseText);
                  var tiles = hasData(feature_out);
-                  /*if (jurisdiction_geoms.length > 0){
-                     // tiles = hasData(jurisdictionFilter(jurisdiction_geoms, feature_out));
-                     tiles = hasData(feature_out);
+                  if (jurisdiction_geoms.length > 0){
+                     tiles = hasData(jurisdictionFilter(jurisdiction_geoms, feature_out));
+                    // tiles = hasData(feature_out);
                   }else{
                       tiles = hasData(feature_out);
-                  }*/
+                  }
                   
                   for (var i=0; i<tiles.length; i++){
                     var f = tiles[i];
