debugging map tiles

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -444,8 +444,8 @@ function selection_bounds(map_bounds, highlight_layer) {
         filter= new OpenLayers.Filter.Spatial({
             type: OpenLayers.Filter.Spatial.INTERSECTS,
             property: "the_geom",
-            value: transformed_bounds.toGeometry() });*/
-    }
+            value: transformed_bounds.toGeometry() });
+    }*/
     
     //filterSelectedTiles(box_filter, false, true);
     single_click = false;
