debugging map tiles

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -49,11 +49,14 @@ if ("{{test_mode}}"=="True"){
     geoserver = curr_location+"/geoserver/" ;
 }
 
-{% autoescape off %}
 {% if jurisdiction.viewer|safe %}
 jurisdiction_args = {{jurisdiction.viewer|safe}};
 {% else %}
 jurisdiction_args = "";
+{% endif %}
+
+{% autoescape off %}
+
 grid_args = {{grid.viewer |safe}}
 //var options = grid_args;
 var app, map;
