--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -349,7 +349,7 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
                  var tiles = hasDataFiltering(feature_out);
                   if (jurisdiction_geoms.length > 0){
                      for (var i=0;i<tiles.length;i++){
-                         if (isInJurisdiction(jurisdiction_geoms, tile[i])){
+                         if (isInJurisdiction(jurisdiction_geoms, tiles[i])){
                               if (find_georef(tile_list, tile.georef)<0){
                                      var corners = {
                                         "ur_x": f.data.MAXX, "ur_y": f.data.MAXY,
