--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -274,7 +274,7 @@ Filters tiles if they intersect the geometries which are part of the jurisdictio
 
 function isInJurisdiction(geoms, tile){
     for ( var i=0; i<geoms.length; i++){
-        if (tile.intersects(geoms[i].geometry)){
+        if (tile.geometry.intersects(geoms[i].geometry)){
             return true;
         }
     }
