--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -387,6 +387,7 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
                   single_click=true;
                   end = new Date().getTime();
                   console.log(end);
+                  console.log(end-start);
              }
          }
      };
