--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -299,6 +299,14 @@
         };
     </script>
     <script type="text/javascript" src="{% url "lang" %}"></script>
+    <script>
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+	  ga('create', 'UA-72261630-1', 'auto');
+	  ga('send', 'pageview');
+    </script>
   </body>
 </html>
